--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  //"type": "module",
   "name": "kekstagram",
   "version": "26.0.0",
   "private": true,
@@ -25,4 +26,5 @@
     "node": "16.x",
     "npm": "8.x"
   }
+
 }
